--- a/QiHuangDJ/VIewController/Information/InfomationViewController.xib
+++ b/QiHuangDJ/VIewController/Information/InfomationViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -13,6 +13,7 @@
                 <outlet property="likeBtn" destination="nTP-wl-N3n" id="xcH-2H-ORS"/>
                 <outlet property="mainTableView" destination="hIl-Vg-tDO" id="wOj-jh-rCZ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="zanCountLabel" destination="7Ab-9f-Luf" id="FEm-rZ-p40"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -46,7 +47,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VP4-B5-W1U" userLabel="Comment Button">
-                            <rect key="frame" x="151" y="12" width="19" height="22"/>
+                            <rect key="frame" x="130" y="12" width="19" height="22"/>
                             <state key="normal" image="zhibo_btn_huifu.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -55,7 +56,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTP-wl-N3n" userLabel="Like Button">
-                            <rect key="frame" x="178" y="12" width="19" height="22"/>
+                            <rect key="frame" x="232" y="12" width="19" height="22"/>
                             <state key="normal" image="zhibo_btn_zan.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -64,8 +65,8 @@
                                 <action selector="zanMehod:" destination="-1" eventType="touchUpInside" id="eUB-oq-N1r"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="232" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="74" translatesAutoresizingMaskIntoConstraints="NO" id="7Ab-9f-Luf" userLabel="Liked Counting Label">
-                            <rect key="frame" x="205" y="14" width="24" height="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="74" translatesAutoresizingMaskIntoConstraints="NO" id="7Ab-9f-Luf" userLabel="Liked Counting Label">
+                            <rect key="frame" x="259" y="14" width="24" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -73,13 +74,13 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="nTP-wl-N3n" firstAttribute="leading" secondItem="VP4-B5-W1U" secondAttribute="trailing" constant="8" symbolic="YES" id="8E3-jf-JgN"/>
-                        <constraint firstAttribute="centerX" secondItem="VP4-B5-W1U" secondAttribute="centerX" id="CXs-bH-KCs"/>
+                        <constraint firstItem="nTP-wl-N3n" firstAttribute="leading" secondItem="VP4-B5-W1U" secondAttribute="trailing" constant="83" id="8E3-jf-JgN"/>
+                        <constraint firstAttribute="centerX" secondItem="VP4-B5-W1U" secondAttribute="centerX" constant="20.5" id="CXs-bH-KCs"/>
                         <constraint firstAttribute="centerY" secondItem="JYz-is-33a" secondAttribute="centerY" id="FEC-g1-yhO"/>
                         <constraint firstAttribute="centerY" secondItem="7Ab-9f-Luf" secondAttribute="centerY" id="If4-mz-OAO"/>
                         <constraint firstItem="JYz-is-33a" firstAttribute="leading" secondItem="JG9-kT-ZNy" secondAttribute="leading" constant="20" symbolic="YES" id="XAu-bc-dq9"/>
                         <constraint firstAttribute="centerY" secondItem="VP4-B5-W1U" secondAttribute="centerY" id="jix-mR-xiI"/>
-                        <constraint firstItem="7Ab-9f-Luf" firstAttribute="leading" secondItem="nTP-wl-N3n" secondAttribute="trailing" constant="8" symbolic="YES" id="mUw-Ht-JYK"/>
+                        <constraint firstItem="7Ab-9f-Luf" firstAttribute="leading" secondItem="nTP-wl-N3n" secondAttribute="trailing" constant="8" id="mUw-Ht-JYK"/>
                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7Ab-9f-Luf" secondAttribute="trailing" constant="20" symbolic="YES" id="vvM-0a-BcR"/>
                         <constraint firstAttribute="centerY" secondItem="nTP-wl-N3n" secondAttribute="centerY" id="wBs-jW-E0l"/>
                     </constraints>
